--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@ error.txt
 # 🔧 IDE settings
 .vscode/
 .idea/
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
