--- a/.github/workflows/generate-sitemap.yml
+++ b/.github/workflows/generate-sitemap.yml
@@ -8,17 +8,19 @@ on:
       - 'storefront/templates/storefront/sitemaps/'
       - '.github/workflows/generate-sitemap.yml'
   schedule:
-    # Run daily at 2 AM UTC
     - cron: '0 2 * * *'
 
 jobs:
   generate-sitemap:
     runs-on: ubuntu-latest
+    # --- CRITICAL: Added write permissions for the git push step ---
+    permissions:
+      contents: write
     
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
-      
+        uses: actions/checkout@v4 # Updated to v4 for better support
+
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
@@ -27,7 +29,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       
       - name: Generate sitemaps via Django
         env:
@@ -37,12 +39,16 @@ jobs:
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           DEBUG: 'False'
           ALLOWED_HOSTS: nexassearch.com
-        run: python manage.py generate_static_sitemaps --output-dir storefront/static/sitemaps --verbose
+        run: |
+          # Ensure sitemaps directory exists
+          mkdir -p storefront/static/sitemaps
+          python manage.py generate_static_sitemaps --output-dir storefront/static/sitemaps --verbose
       
       - name: Check if sitemaps changed
         id: sitemap-check
         run: |
-          if git diff --quiet storefront/static/sitemaps/; then
+          git add storefront/static/sitemaps/
+          if git diff --cached --quiet; then
             echo "changed=false" >> $GITHUB_OUTPUT
           else
             echo "changed=true" >> $GITHUB_OUTPUT
@@ -53,14 +59,13 @@ jobs:
         run: |
           git config user.name "GitHub Action"
           git config user.email "no-reply@github.com"
-          git add storefront/static/sitemaps/
           git commit -m "chore: regenerate sitemaps [skip ci]"
           git push
       
-      - name: Notify on success
-        if: success()
-        run: echo "✅ Sitemaps generated and committed successfully"
-      
-      - name: Notify if no changes
-        if: steps.sitemap-check.outputs.changed == 'false'
-        run: echo "ℹ️ Sitemaps already up-to-date, no changes to commit"
+      - name: Notify results
+        run: |
+          if [ "${{ steps.sitemap-check.outputs.changed }}" = "true" ]; then
+            echo "✅ Sitemaps generated and committed"
+          else
+            echo "ℹ️ No changes detected"
+          fi
