--- a/.github/workflows/generate-sitemap.yml
+++ b/.github/workflows/generate-sitemap.yml
@@ -29,6 +29,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          # Add Pillow explicitly here to be safe
+          pip install Pillow 
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       
       - name: Generate sitemaps via Django
